<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!--페이스북-->
    <string name="facebook_app_id">320865924938158</string>

    <!--구글-->
    <string name="server_client_id">417181065679-fdmmgapnmus8ca0fc8ocgvcfk4iclqr2.apps.googleusercontent.com</string>

    <string name="app_name">WorkTogether</string>
    <string name="login">Login</string>
    <string name="join_message"><u>회원가입을 하지 않으셨나요?</u></string>
    <string name="email">EMAIL</string>
    <string name="password">PASSWORD</string>
    <string name="addGroup">그룹추가</string>

    <string name="name">Name</string>
    <string name="status">Status</string>
    <string name="modify_profile">프로필 수정</string>
    <string name="logout">로그아웃</string>
    <string name="group_request">그룹요청</string>
    <string name="friend_request">친구요청</string>
    <string name="accept">수락</string>
    <string name="refuse">거절</string>
    <string name="cancel">취소</string>
    <string name="group_name">그룹 이름</string>
    <string name="group_content">그룹 설명</string>
    <string name="group_pick_member">그룹원 선택</string>
    <string name="group_make">그룹만들기</string>
    <string name="select_complete">선택완료</string>
    <string name="send">전송</string>
    <string name="chatting_topic">채팅 주제</string>
    <string name="chatting_pick_member">유저 선택</string>
    <string name="chatting_make">채팅만들기</string>
    <string name="freind_add_button">친구추가버튼</string>
    <string name="friend_add_button">친구추가버튼</string>
    <string name="add_friend">친구추가</string>
    <string name="out">나가기</string>
</resources>
