<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    android:id="@+id/group_make_mainLayout"
    android:background="@color/background">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:layout_weight="1">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/group_name"
            android:textColor="@color/textColor"
            android:textSize="15dp"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLines="1"
            android:textColor="@color/textColor"
            android:id="@+id/group_name_input"
            android:textSize="15dp"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:layout_weight="3">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/group_content"
            android:textColor="@color/textColor"
            android:textSize="15dp"/>

        <EditText
            android:textColor="@color/textColor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/group_content_input"
            android:textSize="15dp"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3"
        android:orientation="vertical">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/group_pick_member"
                android:textColor="@color/textColor"
                android:textSize="15dp"/>

            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:src="@drawable/add"
                android:id="@+id/group_friend_add_button"
                android:layout_alignParentEnd="true"
                android:layout_gravity="center_vertical"
                android:onClick="onClick"/>
        </RelativeLayout>

        <GridView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:numColumns="5"
            android:id="@+id/group_member_grid_view"/>

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_marginTop="10dp">

        <Button
            android:layout_width="80dp"
            android:layout_height="35dp"
            android:text="@string/group_make"
            android:id="@+id/group_make_button"
            android:onClick="onClick"
            android:background="@drawable/mybutton"/>

        <Button
            android:layout_width="80dp"
            android:layout_height="35dp"
            android:layout_marginLeft="10dp"
            android:text="@string/cancel"
            android:id="@+id/group_make_cancel_button"
            android:onClick="onClick"
            android:background="@drawable/mybutton"/>
    </LinearLayout>


</LinearLayout>