<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="4"
        android:gravity="center">
       <de.hdodenhof.circleimageview.CircleImageView
           xmlns:app="http://schemas.android.com/apk/res-auto"
           android:id="@+id/profile_image"
           android:layout_width="96dp"
           android:layout_height="96dp"
           android:src="@drawable/user"
           app:civ_border_width="2dp"
           app:civ_border_color="@color/textColor"/>
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:orientation="vertical"
        android:layout_margin="5dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/name"
            android:textColor="@color/textColor"
            android:textSize="15dp"
            android:layout_marginBottom="5dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20dp"
            android:maxLines="1"
            android:textColor="@color/textColor"
            android:id="@+id/name_tv"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="5dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/status"
            android:textColor="@color/textColor"
            android:textSize="15dp"
            android:layout_marginBottom="5dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20dp"
            android:id="@+id/status_tv"
            android:textColor="@color/textColor"
            android:maxLines="2"
            android:layout_marginLeft="5dp"
            android:ellipsize="end"/>


    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal"
        android:gravity="center">

        <Button
            android:layout_width="80dp"
            android:layout_height="35dp"
            android:background="@drawable/mybutton"
            android:text="@string/modify_profile"
            android:id="@+id/profile_modify_button"
            android:layout_marginRight="5dp"/>

        <Button
            android:layout_width="80dp"
            android:layout_height="35dp"
            android:background="@drawable/mybutton"
            android:text="@string/logout"
            android:id="@+id/logout_button"
            android:layout_toRightOf="@+id/profile_modify_button"/>

    </RelativeLayout>

</LinearLayout>