<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/modify_mainLayout"
    android:background="@color/background">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3"
        android:gravity="center">
        <de.hdodenhof.circleimageview.CircleImageView
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:id="@+id/modify_profile_image"
            android:layout_width="96dp"
            android:layout_height="96dp"
            android:src="@drawable/user"
            app:civ_border_width="1dp"
            app:civ_border_color="#FFFFFFFF"
            android:onClick="onClick"/>
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:orientation="vertical"
        android:layout_margin="5dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/name"
            android:textSize="15dp"
            android:textColor="@color/textColor"
            android:layout_marginBottom="5dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20dp"
            android:maxLines="1"
            android:id="@+id/modify_name_tv"
            android:textColor="@color/textColor"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="5dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/status"
            android:textSize="15dp"
            android:textColor="@color/textColor"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="15dp"
            android:id="@+id/modify_status_et"
            android:textColor="@color/textColor"
            android:maxLines="2"
            android:layout_marginLeft="5dp"/>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_marginTop="10dp">
            <Button
                android:layout_width="80dp"
                android:layout_height="35dp"
                android:background="@drawable/mybutton"
                android:text="@string/modify_profile"
                android:id="@+id/modify_button"
                android:onClick="onClick"/>
            <Button
                android:layout_width="80dp"
                android:layout_height="35dp"
                android:background="@drawable/mybutton"
                android:layout_marginLeft="10dp"
                android:text="@string/cancel"
                android:id="@+id/modify_cancel_button"
                android:onClick="onClick"/>
        </LinearLayout>

    </LinearLayout>

</LinearLayout>