<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/login_mainLayout"
    android:layout_weight="7"
    android:background="@color/background">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3"
        android:gravity="center"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:textSize="50dp"
            android:textColor="@color/textColor"/>
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:layout_weight="1.5"
        android:gravity="center_vertical"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLines="1"
            android:hint="@string/email"
            android:textSize="15dp"
            android:inputType="textEmailAddress"
            android:id="@+id/input_email"
            android:textColorHint="@color/textColor"
            android:textColor="@color/textColor"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLines="1"
            android:hint="@string/password"
            android:textSize="15dp"
            android:textColorHint="@color/textColor"
            android:id="@+id/input_password"
            android:inputType="textPassword"
            android:textColor="@color/textColor"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:layout_weight="3"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp">

        <Button
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="@drawable/mybutton"
            android:text="@string/login"
            android:id="@+id/login_button"
            android:onClick="onClick"
            android:layout_marginLeft="3.5dp"
            android:layout_marginRight="3.5dp"
            android:layout_marginBottom="5dp"/>

        <com.facebook.login.widget.LoginButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20dp"
            android:layout_marginLeft="3.5dp"
            android:layout_marginRight="3.5dp"
            android:id="@+id/facebook_login_button"
            android:layout_marginBottom="5dp"/>

        <com.google.android.gms.common.SignInButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/sign_in_button">
        </com.google.android.gms.common.SignInButton>

        <TextView
            android:layout_marginTop="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/join_message"
            android:textColor="@color/textColor"
            android:gravity="center"
            android:textSize="15dp"
            android:id="@+id/join_message"
            android:onClick="onClick"/>


    </LinearLayout>
</LinearLayout>