<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="2"
    android:background="@color/background">

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/colorAccent"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/group_request"
            android:gravity="center_vertical"
            android:textSize="15dp"
            android:textColor="@color/textColor"/>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/colorAccent"
            android:layout_marginBottom="5dp"/>

        <ListView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:divider="@color/colorAccent"
            android:dividerHeight="1dp"
            android:id="@+id/group_request_listview"/>

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/colorAccent"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/friend_request"
                android:layout_centerVertical="true"
                android:textSize="15dp"
                android:textColor="@color/textColor"/>
            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:src="@drawable/add"
                android:layout_centerInParent="true"
                android:layout_alignParentEnd="true"
                android:id="@+id/friend_add_button"
                android:contentDescription="@string/friend_add_button"/>
        </RelativeLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/colorAccent"
            android:layout_marginBottom="5dp"/>

        <ListView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:divider="@color/colorAccent"
            android:dividerHeight="1dp"
            android:id="@+id/friend_request_listview"/>

    </LinearLayout>
</LinearLayout>